Guardo mis cambios locales en application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8097
+server.port=8080
 
 # Nombre de la aplicación
 spring.application.name=eventos
@@ -13,4 +13,4 @@ logging.level.com.eventos.eventos=INFO
 # logging.file.name=logs/eventos.log
 
 # (Opcional) Formato de fecha en los logs
-# logging.pattern.dateformat=yyyy-MM-dd HH:mm:ss
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
