Guardo mis cambios locales antes de pull

--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,12 @@
             </exclusions>
         </dependency>
 
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
         <!-- Incluir Log4j2 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
