--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,19 @@
-server.port=8097
+server.port=8080
 
 # Nombre de la aplicación
 spring.application.name=eventos
 
-# Nivel de log global (puedes cambiar a DEBUG si quieres ver más detalles)
+# Configuración de logs
 logging.level.root=INFO
-
-# Nivel de log para tu paquete (ajusta el paquete según tu estructura)
 logging.level.com.eventos.eventos=INFO
 
-# (Opcional) Ruta del archivo de logs si usas log4j2.xml y quieres logs en archivo
-# logging.file.name=logs/eventos.log
+# Configuración de PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=santiago1+)
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-# (Opcional) Formato de fecha en los logs
-# logging.pattern.dateformat=yyyy-MM-dd HH:mm:ss
-
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
+# Configuración de Hibernate/JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
